--- a/wiki/Ent02_Minuta04.wiki
+++ b/wiki/Ent02_Minuta04.wiki
@@ -1,3 +1,4 @@
+#labels Minuta04
 Ent02_Minuta04
 = Proyecto: Gestión Gimnasio =
 
@@ -15,16 +16,17 @@ Duración: 3 horas
 
 == Resumen del seguimiento de las actividades:  ==
 
+De acuerdo a las observaciones presentadas por parte del Ing. Oscar Franco Bedoya se procede a realizar las correcciones correspondientes.
+
 Logros a la fecha 
 
-- Revisión previa de documentación 
+- Identificación de los aspectos a corregir en la Primera Entrega
+- Identificación de los aspectos para mejorar en la Primera Entrega
+- Corrección de los diagramas de Casos de Uso
+- Corrección de la Especificación de los Casos de Uso
 
-- Afinamiento de diagrama de actividades haciendo uso de la herramienta StarUML 
-
-- Identificacion de los Diagramas de Casos de Uso
 
 
 == Objetivos para la próxima reunión Plan de actividades ==
 
-- Diagramas de Casos de Uso completados
-- Elaboracion de trabajo - Primera Entrega
+- Inicio del desarrollo de la segunda entrega
