Edited wiki page through web user interface.

--- a/wiki/Ent02_Minuta05.wiki
+++ b/wiki/Ent02_Minuta05.wiki
@@ -1,4 +1,4 @@
-Proyecto: Gestión Gimnasio
+= Proyecto: Gestión Gimnasio =
 Documento: Reporte de seguimiento de reunión periódica 
 
 Numero de reunión: 3 
